sample/demo-minimal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-localhost
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localdev.me
    http:
      paths:
        - path: /something/(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: demo
              port:
                number: 80
